--- a/ReachTheEndGame/MineSweeper.xaml
+++ b/ReachTheEndGame/MineSweeper.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ReachTheEndGame"
         mc:Ignorable="d"
-        Title="MineSweeper" Height="450" Width="320" ResizeMode="NoResize">
+        Title="MineSweeper" Height="430" Width="320" ResizeMode="NoResize">
     <Window.Resources>
         <Style TargetType="Label" x:Key="GameGridStyle">
             <Setter Property="Background" Value="#FF949494"/>
@@ -20,13 +20,21 @@
     </Window.Resources>
     <Grid x:Name="grdBase" Background="#FF949494">
         <Grid.RowDefinitions>
-            <RowDefinition Height="30"/>
-            <RowDefinition Height="30"/>
+            <RowDefinition Height="87"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        <Label Grid.Row="0" x:Name="lblBombs">.</Label>
-        <Label Grid.Row="1" x:Name="lblFlags">.</Label>
-        <Grid Grid.Row="2" Height="304" Width="{Binding ElementName=grdGame,Path=Height}" x:Name="grdGame" VerticalAlignment="Bottom" Background="Gray">
+        <Grid Grid.Row="0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            
+            <Label Grid.Column="0" HorizontalAlignment="Center" HorizontalContentAlignment="Center" VerticalAlignment="Center" VerticalContentAlignment="Center" FontSize="30" x:Name="lblBombs">.</Label>
+            <Label Grid.Column="1" HorizontalAlignment="Center" HorizontalContentAlignment="Center" VerticalAlignment="Center" VerticalContentAlignment="Center" FontSize="30" x:Name="lblFlags">.</Label>
         </Grid>
+        <Grid Grid.Row="1" Height="304" Width="{Binding ElementName=grdGame,Path=Height}" x:Name="grdGame" VerticalAlignment="Bottom" Background="Gray">
+            
+        </Grid>
+
     </Grid>
 </Window>
