--- a/ReachTheEndGame/MemoryGameWindow.xaml
+++ b/ReachTheEndGame/MemoryGameWindow.xaml
@@ -20,17 +20,18 @@
                     <RowDefinition/>
                 </Grid.RowDefinitions>
                 <Label Name="lblTimer" Content="Ennyi mp van vissza: 30"/>
-                <WrapPanel Grid.Row="1">
-                    <Border BorderBrush="Black" BorderThickness="3" Margin="5,5,5,5">
-                        <Image Source="Images/MemoryGame/Cardback.png" Width="79"/>
-                    </Border>
-                    <Border BorderBrush="Black" Background="LightGray" BorderThickness="3" Margin="5,5,5,5">
-                        <Image Source="Images/MemoryGame/Pic1.png" Width="79"/>
-                    </Border>
-
+                <WrapPanel Grid.Row="1" Name="wpFirstSix" HorizontalAlignment="Center">
+                    
                 </WrapPanel>
+                <WrapPanel Grid.Row="2" Name="wpSecondSix"  HorizontalAlignment="Center">
+                    
+                </WrapPanel>
+                <WrapPanel Grid.Row="3" Name="wpThirdSix"  HorizontalAlignment="Center">
                 
-                
+                </WrapPanel>
+            </Grid>
+            <Grid Grid.Row="1">
+                <Label Name="test"/>
             </Grid>
         </Grid>
     </Border>
