--- a/ReachTheEndGame/MemoryGameWindow.xaml
+++ b/ReachTheEndGame/MemoryGameWindow.xaml
@@ -41,7 +41,8 @@
                         <Bold>Feladat:</Bold><LineBreak/>Találd meg a 6 elrejtett párt időn belül!<LineBreak/>Van olyan kép ami csak egyszer szerepel.
                     </TextBlock>
                     <Label Grid.Column="1" Content="Ennyi párt találtál meg:" HorizontalAlignment="Right" VerticalAlignment="Center" FontSize="20"/>
-                    <Label Name="lblFountPairsCount" Grid.Column="2" Content="3" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="20"/>
+                    <Label Name="lblFoundPairsCount" Grid.Column="2" Content="0" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="20"/>
+                    <Label Name="test" Content=""/>
 
                 </Grid>
             </Grid>
