--- a/ReachTheEndGame/MainWindow.xaml
+++ b/ReachTheEndGame/MainWindow.xaml
@@ -18,6 +18,15 @@
             <Setter Property="Height" Value="15"/>
             <Setter Property="Fill" Value="White"/>
         </Style>
+        <Style TargetType="Rectangle" x:Key="GameGridStyle">
+            <Setter Property="Width" Value="50"/>
+            <Setter Property="Height" Value="35"/>
+            <!--<Setter Property="Fill" Value="White"/>-->
+            <Setter Property="Stroke" Value="Black"/>
+            <Setter Property="StrokeThickness" Value="3"/>
+            <Setter Property="RadiusX" Value="5"/>
+            <Setter Property="RadiusY" Value="5"/>
+        </Style>
     </Window.Resources>
     <Grid x:Name="grdBase" Margin="10">
         <Grid.RowDefinitions>
@@ -59,8 +68,8 @@
         </Border>
 
         <Border Style="{StaticResource MainBorderStyle}" Grid.Row="0" Grid.Column="0" Grid.RowSpan="3">
-            <Canvas x:Name="cnvGame">
-
+            <Canvas x:Name="cnvGame" ClipToBounds="True">
+                <Rectangle Style="{StaticResource GameGridStyle}" Canvas.Left="519" Canvas.Top="550"/>
             </Canvas>
         </Border>
 
