játék legenerálása kész, pálya kész, patternek kész #2 #3

--- a/ReachTheEndGame/MainWindow.xaml
+++ b/ReachTheEndGame/MainWindow.xaml
@@ -19,8 +19,8 @@
             <Setter Property="Fill" Value="White"/>
         </Style>
         <Style TargetType="Rectangle" x:Key="GameGridStyle">
-            <Setter Property="Width" Value="50"/>
-            <Setter Property="Height" Value="35"/>
+            <Setter Property="Width" Value="30"/>
+            <Setter Property="Height" Value="30"/>
             <!--<Setter Property="Fill" Value="White"/>-->
             <Setter Property="Stroke" Value="Black"/>
             <Setter Property="StrokeThickness" Value="3"/>
@@ -69,7 +69,7 @@
 
         <Border Style="{StaticResource MainBorderStyle}" Grid.Row="0" Grid.Column="0" Grid.RowSpan="3">
             <Canvas x:Name="cnvGame" ClipToBounds="True">
-                <Rectangle Style="{StaticResource GameGridStyle}" Canvas.Left="519" Canvas.Top="550"/>
+                <!--<Rectangle Style="{StaticResource GameGridStyle}" Canvas.Left="519" Canvas.Top="550"/>-->
             </Canvas>
         </Border>
 
