--- a/ReachTheEndGame/HitTheMoleWindow.xaml
+++ b/ReachTheEndGame/HitTheMoleWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ReachTheEndGame"
         mc:Ignorable="d"
-        Title="HitTheMoleWindow" Height="540" Width="700"
+        Title="Verjük a vakondot!" Height="540" Width="700" ResizeMode="NoResize"
         Name="window">
     <Border BorderBrush="Black" Background="LightGray" BorderThickness="3" Margin="6,6,6,6">
         <Grid>
