--- a/ReachTheEndGame/MineSweeper.xaml
+++ b/ReachTheEndGame/MineSweeper.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ReachTheEndGame"
         mc:Ignorable="d"
-        Title="MineSweeper" Height="430" Width="320" ResizeMode="NoResize">
+        Title="Aknakereső" Height="430" Width="320" ResizeMode="NoResize">
     <Window.Resources>
         <Style TargetType="Label" x:Key="GameGridStyle">
             <Setter Property="Background" Value="#FF949494"/>
